input color images

--- a/VariationalAutoencoder/prepare_model/keras/VAE.ipynb
+++ b/VariationalAutoencoder/prepare_model/keras/VAE.ipynb
@@ -58,12 +58,14 @@
     "    print(\"cutting images ...\")\n",
     "    x_out = []\n",
     "    x_shape = x.shape\n",
+    "    #print(\"cut_img : \", x_shape)\n",
     "\n",
     "    for i in range(number):\n",
     "        shape_0 = np.random.randint(0,x_shape[0])\n",
     "        shape_1 = np.random.randint(0,x_shape[1]-height)\n",
     "        shape_2 = np.random.randint(0,x_shape[2]-width)\n",
-    "        temp = x[shape_0, shape_1:shape_1+height, shape_2:shape_2+width, 0]\n",
+    "        temp = x[shape_0, shape_1:shape_1+height, shape_2:shape_2+width]\n",
+    "        #print(\"cut_img temp : \", temp.shape)\n",
     "        x_out.append(temp.reshape((height, width, x_shape[3])))\n",
     "\n",
     "    x_out = np.array(x_out)\n",
@@ -96,25 +98,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train, _, _, _, _ = loadimg.loadimg('images/AnomalyDetectionPictures/normal',\n",
-    "                                                       imgsize=IMG_SIZE,\n",
-    "                                                       isdirs=False,\n",
-    "                                                       normalize=True,\n",
-    "                                                       onehot=True,\n",
-    "                                                       grayscale=True,\n",
-    "                                                       train_ratio=0.9)\n",
+    "GRAY = False\n",
+    "X_TRAIN_PATH = './models/x_train.npy'\n",
+    "X_TEST_PATH = './models/x_test.npy'\n",
+    "X_SPLIT_PATH = './models/x_train_split.npy'\n",
+    "\n",
+    "try:\n",
+    "    x_train = np.load(X_TRAIN_PATH)\n",
+    "    x_test = np.load(X_TEST_PATH)\n",
+    "    x_train_split = np.load(X_SPLIT_PATH)\n",
+    "    \n",
+    "#except KeyboardInterrupt:\n",
+    "except FileNotFoundError:\n",
+    "    x_train, _, _, _, _ = loadimg.loadimg('images/AnomalyDetectionPictures/normal',\n",
+    "                                                           imgsize=IMG_SIZE,\n",
+    "                                                           isdirs=False,\n",
+    "                                                           normalize=True,\n",
+    "                                                           onehot=True,\n",
+    "                                                           grayscale=GRAY,\n",
+    "                                                           train_ratio=0.9)\n",
+    "    np.save(X_TRAIN_PATH, x_train)\n",
+    "    \n",
+    "    _, x_test, _, _, _ = loadimg.loadimg('images/AnomalyDetectionPictures/anomaly',\n",
+    "                                                           imgsize=IMG_SIZE,\n",
+    "                                                           isdirs=False,\n",
+    "                                                           normalize=True,\n",
+    "                                                           onehot=True,\n",
+    "                                                           grayscale=GRAY,\n",
+    "                                                           train_ratio=0.1)\n",
+    "    np.save(X_TEST_PATH, x_test)\n",
+    "    \n",
+    "    x_train_split = cut_img(x_train, 1000000)\n",
+    "    np.save(X_SPLIT_PATH, x_train_split)\n",
+    "    \n",
     "print(\"x_train\", x_train.shape)\n",
-    "\n",
-    "_, x_test, _, _, _ = loadimg.loadimg('images/AnomalyDetectionPictures/anomaly',\n",
-    "                                                       imgsize=IMG_SIZE,\n",
-    "                                                       isdirs=False,\n",
-    "                                                       normalize=True,\n",
-    "                                                       onehot=True,\n",
-    "                                                       grayscale=True,\n",
-    "                                                       train_ratio=0.1)\n",
     "print(\"x_test\", x_test.shape)\n",
-    "\n",
-    "x_train_split = cut_img(x_train, 1000000)"
+    "print(\"x_train_split\", x_train_split.shape)"
    ]
   },
   {
@@ -126,10 +145,11 @@
     "# Show split images\n",
     "#plt.figure()\n",
     "\n",
-    "for i in range(20):\n",
+    "for i in range(40):\n",
     "    img = x_train_split[i]\n",
-    "    img = img.reshape((img.shape[0], img.shape[1]))\n",
-    "    img = np.stack((img,img,img), axis=-1)\n",
+    "    if (img.shape[2] == 1): # Gray scale\n",
+    "        img = img.reshape((img.shape[0], img.shape[1]))\n",
+    "        img = np.stack((img,img,img), axis=-1)\n",
     "    #plt.subplot(4, 4, i+1)\n",
     "    plt.imshow(img)\n",
     "    plt.show()\n",
@@ -143,10 +163,10 @@
    "outputs": [],
    "source": [
     "# network parameters\n",
-    "input_shape=(SPLIT_SIZE, SPLIT_SIZE, 1)\n",
-    "batch_size = 5160\n",
+    "input_shape=(SPLIT_SIZE, SPLIT_SIZE, x_train_split.shape[3])\n",
+    "batch_size = 3000\n",
     "latent_dim = SPLIT_SIZE//4\n",
-    "epochs = 500\n",
+    "epochs = 10\n",
     "Nc = 16"
    ]
   },
@@ -193,11 +213,11 @@
     "x = BatchNormalization()(x)\n",
     "x = Activation('relu')(x)\n",
     "\n",
-    "x1 = Conv2DTranspose(1, kernel_size=4, padding='same')(x)\n",
+    "x1 = Conv2DTranspose(input_shape[2], kernel_size=4, padding='same')(x)\n",
     "x1 = BatchNormalization()(x1)\n",
     "out1 = Activation('sigmoid')(x1)#out.shape=(n,28,28,1)\n",
     "\n",
-    "x2 = Conv2DTranspose(1, kernel_size=4, padding='same')(x)\n",
+    "x2 = Conv2DTranspose(input_shape[2], kernel_size=4, padding='same')(x)\n",
     "x2 = BatchNormalization()(x2)\n",
     "out2 = Activation('sigmoid')(x2)#out.shape=(n,28,28,1)\n",
     "\n",
@@ -269,7 +289,8 @@
     "\n",
     "    plt.figure()\n",
     "    plt.subplot(2, 2, 1)\n",
-    "    plt.imshow(x_normal[0,:,:,0], cmap='gray')\n",
+    "    #plt.imshow(x_normal[0,:,:,0], cmap='gray')\n",
+    "    plt.imshow(x_normal[0])\n",
     "    plt.axis('off')\n",
     "    plt.colorbar()\n",
     "\n",
@@ -282,7 +303,8 @@
     "    plt.title(name + \"normal\")\n",
     "\n",
     "    plt.subplot(2, 2, 3)\n",
-    "    plt.imshow(x_anomaly[0,:,:,0], cmap='gray')\n",
+    "    #plt.imshow(x_anomaly[0,:,:,0], cmap='gray')\n",
+    "    plt.imshow(x_anomaly[0])\n",
     "    plt.axis('off')\n",
     "    plt.colorbar()\n",
     "\n",
@@ -307,49 +329,49 @@
    "source": [
     "#ヒートマップの計算\n",
     "MOVE = 8\n",
-    "def evaluate_img(model, arg_x_normal, arg_x_anomaly, name, height=SPLIT_SIZE, width=SPLIT_SIZE, move=MOVE):\n",
-    "#     for x_normal, x_anomaly in zip(arg_x_normal, arg_x_anomaly):\n",
-    "    for x_anomaly in arg_x_anomaly:\n",
-    "        x_normal = np.asarray([arg_x_normal[0]])\n",
-    "        x_anomaly = np.asarray([x_anomaly])\n",
-    "        img_normal = np.zeros((x_normal.shape))\n",
-    "        img_anomaly = np.zeros((x_normal.shape))\n",
-    "        for i in range(int((x_normal.shape[1]-height)/move)):\n",
-    "            for j in range(int((x_normal.shape[2]-width)/move)):\n",
-    "                x_sub_normal = x_normal[0, i*move:i*move+height, j*move:j*move+width, 0]\n",
-    "                x_sub_anomaly = x_anomaly[0, i*move:i*move+height, j*move:j*move+width, 0]\n",
-    "                x_sub_normal = x_sub_normal.reshape(1, height, width, 1)\n",
-    "                x_sub_anomaly = x_sub_anomaly.reshape(1, height, width, 1)\n",
+    "def evaluate_img(model, x_normal, x_anomaly, name, height=SPLIT_SIZE, width=SPLIT_SIZE, move=MOVE):\n",
+    "    x_normal = np.asarray([x_normal])\n",
+    "    x_anomaly = np.asarray([x_anomaly])\n",
+    "    img_normal = np.zeros((x_normal.shape))\n",
+    "    img_anomaly = np.zeros((x_normal.shape))\n",
+    "    for i in range(int((x_normal.shape[1]-height)/move)):\n",
+    "        for j in range(int((x_normal.shape[2]-width)/move)):\n",
+    "            x_sub_normal = x_normal[0, i*move:i*move+height, j*move:j*move+width]\n",
+    "            x_sub_anomaly = x_anomaly[0, i*move:i*move+height, j*move:j*move+width]\n",
+    "            x_sub_normal = x_sub_normal.reshape(1, height, width, input_shape[2])\n",
+    "            x_sub_anomaly = x_sub_anomaly.reshape(1, height, width, input_shape[2])\n",
     "\n",
-    "                #従来手法\n",
-    "                if name == \"old_\":\n",
-    "                    #正常のスコア\n",
-    "                    normal_score = model.evaluate(x_sub_normal, batch_size=1, verbose=0)\n",
-    "                    img_normal[0, i*move:i*move+height, j*move:j*move+width, 0] +=  normal_score\n",
+    "            #従来手法\n",
+    "            if name == \"old_\":\n",
+    "                #正常のスコア\n",
+    "                normal_score = model.evaluate(x_sub_normal, batch_size=1, verbose=0)\n",
+    "                img_normal[0, i*move:i*move+height, j*move:j*move+width, 0] +=  normal_score\n",
     "\n",
-    "                    #異常のスコア\n",
-    "                    anomaly_score = model.evaluate(x_sub_anomaly, batch_size=1, verbose=0)\n",
-    "                    img_anomaly[0, i*move:i*move+height, j*move:j*move+width, 0] +=  anomaly_score\n",
+    "                #異常のスコア\n",
+    "                anomaly_score = model.evaluate(x_sub_anomaly, batch_size=1, verbose=0)\n",
+    "                img_anomaly[0, i*move:i*move+height, j*move:j*move+width, 0] +=  anomaly_score\n",
     "\n",
-    "                #提案手法\n",
-    "                else:\n",
-    "                    #正常のスコア\n",
-    "                    mu, sigma = model.predict(x_sub_normal, batch_size=1, verbose=0)\n",
-    "                    loss = 0\n",
-    "                    for k in range(height):\n",
-    "                        for l in range(width):\n",
-    "                            loss += 0.5 * (x_sub_normal[0,k,l,0] - mu[0,k,l,0])**2 / sigma[0,k,l,0]\n",
-    "                    img_normal[0, i*move:i*move+height, j*move:j*move+width, 0] +=  loss\n",
+    "            #提案手法\n",
+    "            else:\n",
+    "                #正常のスコア\n",
+    "                mu, sigma = model.predict(x_sub_normal, batch_size=1, verbose=0)\n",
+    "                loss = 0\n",
+    "                for k in range(height):\n",
+    "                    for l in range(width):\n",
+    "                        for m in range(input_shape[2]):\n",
+    "                            loss += 0.5 * (x_sub_normal[0,k,l,m] - mu[0,k,l,m])**2 / sigma[0,k,l,m]\n",
+    "                img_normal[0, i*move:i*move+height, j*move:j*move+width] +=  loss\n",
     "\n",
-    "                    #異常のスコア\n",
-    "                    mu, sigma = model.predict(x_sub_anomaly, batch_size=1, verbose=0)\n",
-    "                    loss = 0\n",
-    "                    for k in range(height):\n",
-    "                        for l in range(width):\n",
-    "                            loss += 0.5 * (x_sub_anomaly[0,k,l,0] - mu[0,k,l,0])**2 / sigma[0,k,l,0]\n",
-    "                    img_anomaly[0, i*move:i*move+height, j*move:j*move+width, 0] +=  loss\n",
+    "                #異常のスコア\n",
+    "                mu, sigma = model.predict(x_sub_anomaly, batch_size=1, verbose=0)\n",
+    "                loss = 0\n",
+    "                for k in range(height):\n",
+    "                    for l in range(width):\n",
+    "                        for m in range(input_shape[2]):\n",
+    "                            loss += 0.5 * (x_sub_anomaly[0,k,l,m] - mu[0,k,l,m])**2 / sigma[0,k,l,m]\n",
+    "                img_anomaly[0, i*move:i*move+height, j*move:j*move+width] +=  loss\n",
     "\n",
-    "        save_img(x_normal, x_anomaly, img_normal, img_anomaly, name)"
+    "    save_img(x_normal, x_anomaly, img_normal, img_anomaly, name)"
    ]
   },
   {
@@ -358,9 +380,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(len(x_test)):\n",
+    "train = x_train[0]\n",
+    "for test in x_test:\n",
     "    #evaluate_img(vae, [x_train[i]], [x_test[i]], \"old_\")\n",
-    "    evaluate_img(vae, [x_train[i]], [x_test[i]], \"new_\")"
+    "    evaluate_img(vae, train, test, \"new_\")"
    ]
   },
   {
@@ -373,9 +396,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py36_gpu",
+   "display_name": "venv",
    "language": "python",
-   "name": "py36_gpu"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -387,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
