--- a/VariationalAutoencoder/prepare_model/keras/VAE.ipynb
+++ b/VariationalAutoencoder/prepare_model/keras/VAE.ipynb
@@ -27,6 +27,10 @@
     "import matplotlib.colors as colors\n",
     "import os, datetime\n",
     "import loadimg\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "from PIL import ImageFile\n",
+    "ImageFile.LOAD_TRUNCATED_IMAGES = True\n",
     "#os.environ[\"CUDA_DEVICE_ORDER\"] = \"PCI_BUS_ID\" \n",
     "#os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
     "\n",
@@ -55,12 +59,12 @@
    "source": [
     "#8×8のサイズに切り出す\n",
     "def cut_img(x, number, height=SPLIT_SIZE, width=SPLIT_SIZE):\n",
-    "    print(\"cutting images ...\")\n",
+    "    print(\"cutting images ...\", flush=True)\n",
     "    x_out = []\n",
     "    x_shape = x.shape\n",
     "    #print(\"cut_img : \", x_shape)\n",
     "\n",
-    "    for i in range(number):\n",
+    "    for i in tqdm(range(number)):\n",
     "        shape_0 = np.random.randint(0,x_shape[0])\n",
     "        shape_1 = np.random.randint(0,x_shape[1]-height)\n",
     "        shape_2 = np.random.randint(0,x_shape[2]-width)\n",
@@ -69,7 +73,7 @@
     "        x_out.append(temp.reshape((height, width, x_shape[3])))\n",
     "\n",
     "    x_out = np.array(x_out)\n",
-    "    print(\"Complete.\", x_out.shape)\n",
+    "    print(\"Complete.\", x_out.shape, flush=True)\n",
     "\n",
     "    return x_out"
    ]
@@ -116,7 +120,7 @@
     "                                                           normalize=True,\n",
     "                                                           onehot=True,\n",
     "                                                           grayscale=GRAY,\n",
-    "                                                           train_ratio=0.9)\n",
+    "                                                           train_ratio=1)\n",
     "    np.save(X_TRAIN_PATH, x_train)\n",
     "    \n",
     "    _, x_test, _, _, _ = loadimg.loadimg('images/AnomalyDetectionPictures/anomaly',\n",
@@ -125,7 +129,7 @@
     "                                                           normalize=True,\n",
     "                                                           onehot=True,\n",
     "                                                           grayscale=GRAY,\n",
-    "                                                           train_ratio=0.1)\n",
+    "                                                           train_ratio=0)\n",
     "    np.save(X_TEST_PATH, x_test)\n",
     "    \n",
     "    x_train_split = cut_img(x_train, 1000000)\n",
