--- a/VariationalAutoencoder/prepare_model/keras/VAE.ipynb
+++ b/VariationalAutoencoder/prepare_model/keras/VAE.ipynb
@@ -73,7 +73,7 @@
     "        x_out.append(temp.reshape((height, width, x_shape[3])))\n",
     "\n",
     "    x_out = np.array(x_out)\n",
-    "    print(\"Complete.\", x_out.shape, flush=True)\n",
+    "    #print(\"Complete.\", x_out.shape, flush=True)\n",
     "\n",
     "    return x_out"
    ]
@@ -99,45 +99,58 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "GRAY = False\n",
+    "GRAY = True\n",
     "X_TRAIN_PATH = './models/x_train.npy'\n",
     "X_TEST_PATH = './models/x_test.npy'\n",
-    "X_SPLIT_PATH = './models/x_train_split.npy'\n",
+    "X_ANOMALY_PATH = './models/x_anomaly.npy'\n",
+    "X_TRA_SPLIT_PATH = './models/x_train_split.npy'\n",
+    "X_TES_SPLIT_PATH = './models/x_test_split.npy'\n",
     "\n",
     "try:\n",
+    "    #raise FileNotFoundError(\"in try\")\n",
     "    x_train = np.load(X_TRAIN_PATH)\n",
     "    x_test = np.load(X_TEST_PATH)\n",
-    "    x_train_split = np.load(X_SPLIT_PATH)\n",
+    "    x_anomaly = np.load(X_ANOMALY_PATH)\n",
+    "    x_train_split = np.load(X_TRA_SPLIT_PATH)\n",
+    "    x_test_split = np.load(X_TES_SPLIT_PATH)\n",
     "    \n",
     "#except KeyboardInterrupt:\n",
     "except FileNotFoundError:\n",
-    "    x_train, _, _, _, _ = loadimg.loadimg('images/AnomalyDetectionPictures/normal',\n",
+    "    x_train, x_test, _, _, _ = loadimg.loadimg('images/AnomalyDetectionPictures/normal',\n",
     "                                                           imgsize=IMG_SIZE,\n",
     "                                                           isdirs=False,\n",
     "                                                           normalize=True,\n",
     "                                                           onehot=True,\n",
     "                                                           grayscale=GRAY,\n",
-    "                                                           train_ratio=1)\n",
+    "                                                           train_ratio=0.9)\n",
     "    np.save(X_TRAIN_PATH, x_train)\n",
+    "    np.save(X_TEST_PATH, x_test)\n",
     "    \n",
-    "    _, x_test, _, _, _ = loadimg.loadimg('images/AnomalyDetectionPictures/anomaly',\n",
+    "    _, x_anomaly, _, _, _ = loadimg.loadimg('images/AnomalyDetectionPictures/anomaly',\n",
     "                                                           imgsize=IMG_SIZE,\n",
     "                                                           isdirs=False,\n",
     "                                                           normalize=True,\n",
     "                                                           onehot=True,\n",
     "                                                           grayscale=GRAY,\n",
     "                                                           train_ratio=0)\n",
-    "    np.save(X_TEST_PATH, x_test)\n",
+    "    np.save(X_ANOMALY_PATH, x_anomaly)\n",
     "    \n",
-    "    x_train_split = cut_img(x_train, 1000000)\n",
-    "    np.save(X_SPLIT_PATH, x_train_split)\n",
+    "    x_train_split = cut_img(x_train, 10000000)\n",
+    "    np.save(X_TRA_SPLIT_PATH, x_train_split)\n",
+    "    \n",
+    "    x_test_split = cut_img(x_test, 10000)\n",
+    "    np.save(X_TES_SPLIT_PATH, x_test_split)\n",
     "    \n",
     "print(\"x_train\", x_train.shape)\n",
     "print(\"x_test\", x_test.shape)\n",
-    "print(\"x_train_split\", x_train_split.shape)"
+    "print(\"x_anomaly\", x_anomaly.shape)\n",
+    "print(\"x_train_split\", x_train_split.shape)\n",
+    "print(\"x_test_split\", x_test_split.shape)"
    ]
   },
   {
@@ -168,10 +181,10 @@
    "source": [
     "# network parameters\n",
     "input_shape=(SPLIT_SIZE, SPLIT_SIZE, x_train_split.shape[3])\n",
-    "batch_size = 3000\n",
-    "latent_dim = SPLIT_SIZE//4\n",
-    "epochs = 10\n",
-    "Nc = 16"
+    "batch_size = 6000\n",
+    "latent_dim = SPLIT_SIZE//4  \n",
+    "epochs = 100\n",
+    "Nc = 8"
    ]
   },
   {
@@ -265,10 +278,10 @@
    "source": [
     "# train the autoencoder\n",
     "#vae.fit(x_train_1,\n",
-    "vae.fit(x_train_split,\n",
+    "result = vae.fit(x_train_split,\n",
     "        epochs=epochs,\n",
-    "        batch_size=batch_size)\n",
-    "        #validation_data=(x_test, None))\n",
+    "        batch_size=batch_size,\n",
+    "    validation_data=(x_test_split, None))\n",
     "now = datetime.datetime.now()\n",
     "vae.save_weights(\"models/vae_mnist_{0:%Y%m%d_%H%M%S}.h5\".format(now))"
    ]
@@ -385,9 +398,34 @@
    "outputs": [],
    "source": [
     "train = x_train[0]\n",
-    "for test in x_test:\n",
+    "for test in x_anomaly[:20]:\n",
     "    #evaluate_img(vae, [x_train[i]], [x_test[i]], \"old_\")\n",
     "    evaluate_img(vae, train, test, \"new_\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.plot(range(1, epochs+1-5), result.history['loss'][5:], label=\"training\")\n",
+    "plt.plot(range(1, epochs+1-5), result.history['val_loss'][5:], label=\"validation\")\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Accuracy')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result.history"
    ]
   },
   {
@@ -400,9 +438,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "py36_gpu",
    "language": "python",
-   "name": "venv"
+   "name": "py36_gpu"
   },
   "language_info": {
    "codemirror_mode": {
@@ -414,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
