--- a/VariationalAutoencoder/prepare_model/keras/VAE.ipynb
+++ b/VariationalAutoencoder/prepare_model/keras/VAE.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SPLIT_SIZE = 32 # multiples of 4\n",
+    "SPLIT_SIZE = 64 # multiples of 4\n",
     "IMG_SIZE = 128"
    ]
   },
@@ -140,10 +140,10 @@
     "                                                           train_ratio=0)\n",
     "    np.save(X_ANOMALY_PATH, x_anomaly)\n",
     "    \n",
-    "    x_train_split = cut_img(x_train, 10000000)\n",
+    "    x_train_split = cut_img(x_train, 1000000)\n",
     "    np.save(X_TRA_SPLIT_PATH, x_train_split)\n",
     "    \n",
-    "    x_test_split = cut_img(x_test, 10000)\n",
+    "    x_test_split = cut_img(x_test, 1000)\n",
     "    np.save(X_TES_SPLIT_PATH, x_test_split)\n",
     "    \n",
     "print(\"x_train\", x_train.shape)\n",
@@ -183,7 +183,7 @@
     "input_shape=(SPLIT_SIZE, SPLIT_SIZE, x_train_split.shape[3])\n",
     "batch_size = 3000\n",
     "latent_dim = SPLIT_SIZE//4  \n",
-    "epochs = 100\n",
+    "epochs = 10\n",
     "Nc = 8"
    ]
   },
@@ -265,7 +265,9 @@
     "\n",
     "vae_loss = K.mean(kl_loss + m_vae_loss + a_vae_loss)\n",
     "vae.add_loss(vae_loss)\n",
-    "vae.compile(optimizer='adam')"
+    "vae.compile(optimizer='adam')\n",
+    "\n",
+    "vae.summary()"
    ]
   },
   {
@@ -438,9 +440,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py36_gpu",
+   "display_name": "venv",
    "language": "python",
-   "name": "py36_gpu"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -452,7 +454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
